# UrhoMorphing

./: CMakeLists.txt  FBXViewerApp.cpp  exports.bat  main.cpp  mylog.txt
Resources/CoreData/Materials/: Morph.xml
Resources/CoreData/Shaders/GLSL/: Morph.glsl
Resources/CoreData/Shaders/HLSL/: Morph.hlsl
Resources/CoreData/Techniques/: Morph.xml
Resources/CustomData/: character_1.fbx  model.fbx  repo.fbx  repo_reorder.fbx
Resources/CustomData/Materials/: Morph.xml
Resources/CustomData/Shaders/HLSL/: Morph.hlsl  MorphInterpolations.hlsl
Resources/CustomData/Techniques/: Morph.xml
Resources/Data/Scripts/: 06_SkeletalAnimation.as
Resources/Data/Scripts/Editor/: EditorResourceBrowser.as
Resources/Data/Scripts/Tests/Str/: format.as
Resources/FBXData/: model.fbx
src/: FBXLoader.cpp  FBXLoader.h  FBXViewerApp.cpp  FBXViewerApp.h  MorphGeometry.cpp  MorphGeometry.h  SceneHandler.cpp  SceneHandler.h  SceneUtils.cpp  SceneUtils.h
